# workflow-orchestrator

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init_project.sh  pyproject.toml
.circleci/: config.yml
src/workflow_orchestrator/: app.py  logging.py  observability.py  routing.py
src/workflow_orchestrator/api/: main.py  schemas.py
src/workflow_orchestrator/orchestration/: engine.py  registry.py  saga.py
src/workflow_orchestrator/state/: locks.py  models.py  repository.py
src/workflow_orchestrator/tasks/: datasets.py  inference.py
