[project]
name = "workflow-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  # "celery[redis]>=5.3.6",
  # "pydantic-settings>=2.3.0",
  # "motor>=3.4.0",
  # "redis>=5.0.7",
  # "structlog>=24.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"